[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/enemies/fish-big.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/bomber.gd" type="Script" id=2]
[ext_resource path="res://assets/enemies/enemy-death.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 52, 53 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 52, 0, 52, 53 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 104, 0, 52, 53 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 156, 0, 52, 53 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 208, 0, 52, 53 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 260, 0, 52, 53 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 54, 49 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 54, 0, 54, 49 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 54, 49 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 162, 0, 54, 49 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "death",
"speed": 6.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 40.0
height = 52.607

[sub_resource type="CircleShape2D" id=7]
radius = 384.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.145098, 0.266667, 0.372549, 0.588235 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Bomber" type="KinematicBody2D" groups=[
"destroyable",
"enemy",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, 2 )
scale = Vector2( 2.65625, 2.65625 )
frames = SubResource( 5 )
frame = 3
playing = true
offset = Vector2( -3.01176, -0.752941 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 6 )

[node name="VerticalTimer" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
rotation = 1.5708
shape = SubResource( 7 )

[node name="Control" type="Control" parent="."]
margin_left = -32.0
margin_top = -72.0
margin_right = 32.0
margin_bottom = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/bg = SubResource( 8 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="VerticalTimer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_exited"]
[connection signal="timeout" from="HealthBarTimer" to="." method="_on_HealthBarTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
